[gd_scene format=3 uid="uid://54a2bulvntt"]

[ext_resource type="Script" uid="uid://dcx73v2ihf033" path="res://player.gd" id="1_sweqy"]
[ext_resource type="Texture2D" uid="uid://c344sl5smay88" path="res://art/playerGrey_up1.png" id="2_2hs0m"]
[ext_resource type="Texture2D" uid="uid://cmanl2vqbtmwu" path="res://art/playerGrey_up2.png" id="3_1jxqw"]
[ext_resource type="Texture2D" uid="uid://bf7w1cjy4e8dp" path="res://art/playerGrey_walk1.png" id="4_dw050"]
[ext_resource type="Texture2D" uid="uid://boxnvpxdj7qxj" path="res://art/playerGrey_walk2.png" id="5_b26j0"]

[sub_resource type="SpriteFrames" id="SpriteFrames_n7ghd"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_2hs0m")
}, {
"duration": 1.0,
"texture": ExtResource("3_1jxqw")
}],
"loop": true,
"name": &"up",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_dw050")
}, {
"duration": 1.0,
"texture": ExtResource("5_b26j0")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_nvl01"]
radius = 21.0
height = 56.0

[node name="Player" type="Area2D" unique_id=673510681]
position = Vector2(12, -1)
scale = Vector2(0.8, 0.8)
collision_mask = 3
script = ExtResource("1_sweqy")
metadata/_edit_group_ = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="." unique_id=982265318]
scale = Vector2(0.3, 0.3)
sprite_frames = SubResource("SpriteFrames_n7ghd")
animation = &"walk"
frame_progress = 0.48543248

[node name="CollisionShape2D" type="CollisionShape2D" parent="." unique_id=796527110]
position = Vector2(-15, 0)
scale = Vector2(1.5, 1.5)
shape = SubResource("CapsuleShape2D_nvl01")

[node name="SpeedTimer" type="Timer" parent="." unique_id=652450778]
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="SpeedTimer" to="." method="_on_speed_timer_timeout"]
